# vRnet

./: a.out  control  manipulate_th.f90  net_diag1  th_nuwind_new  tso1
Reaclib/: a.out  ab_blank  ab_he4  match_data  match_read  matr_shape  net_desc  nets4  netwinv  nuc_data  sparse_ind  sunet
hsl_ma48-3.3.0/: ChangeLog  Makefile  Makefile.in  config.status  configure  configure.ac
hsl_ma48-3.3.0/example/C/: Makefile  Makefile.am  Makefile.in  hsl_ma48ds.c  hsl_ma48ds.output  hsl_ma48ss.c  hsl_ma48ss.data  hsl_ma48ss.output
hsl_ma48-3.3.0/example/Fortran/: Makefile  Makefile.am  Makefile.in  hsl_ma48ds.data  hsl_ma48ds.f90  hsl_ma48ds.output  hsl_ma48ss.f90  hsl_ma48ss.output
hsl_ma48-3.3.0/matlab/: INSTALL  common90.g95.f90  ddeps90.g95.f90  hsl_ma48_backslash.m  hsl_ma48_destroy.m  hsl_ma48_expert.f90  hsl_ma48_expert.m  hsl_ma48_factor.m  hsl_ma48_full_test.m  hsl_ma48_install.m  hsl_ma48_solve.m  hsl_ma48_test.m  hsl_matlab.F90
hsl_ma48-3.3.0/src/: Makefile  Makefile.am  Makefile.in  hsl_ma48_double.mod  hsl_ma48_double_ciface.mod  hsl_ma48_ma48_internal_double.mod  hsl_ma48_ma48_internal_single.mod  hsl_ma48_ma50_internal_double.mod  hsl_ma48_ma50_internal_single.mod  hsl_ma48_ma51_internal_double.mod  hsl_ma48_ma51_internal_single.mod  hsl_ma48_single.mod  hsl_ma48_single_ciface.mod  hsl_zb01_double.mod  hsl_zb01_integer.mod  hsl_zb01_single.mod  hsl_zd11_double.mod  hsl_zd11_single.mod
ma48-2.2.0/: Makefile  config.status
ma48-2.2.0/example/: Makefile
ma48-2.2.0/src/: Makefile  ma48.f
source/: Makefile  Makefile_local  abundances.mod  cnse_data.mod  conditions.mod  constants.mod  controls.mod  cross_sect_data.mod  flux_data.mod  jacobian_PARDISO.f90  jacobian_data.mod  match_data.mod  net.f90  nse_abundance.mod  nuc_number.mod  nuclear_data.mod  part_funct_data.mod  process_flux_data.mod  process_reaction_data.mod  reac_rate_data.mod  screen_nse.mod  thermo_data.mod  timers.mod  xnet
